--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ header .id {
     font-family: Arial, sans-serif;
 }
 
+header .id:hover {
+    opacity: 0.7;
+}
+
 .logo {
     padding: 5px;
     text-align: right;
@@ -192,9 +196,17 @@ article h2 {
     margin-left: 100px;
 }
 
+.ea img {
+    margin-left: 70px;
+}
+
 .min {
     float: right;
     margin-right: 100px;
+}
+
+.min img {
+    margin-left: 30px;
 }
 
 ul {
@@ -231,7 +243,7 @@ footer h1 {
 .game {
     background-color: rgba(255, 152, 0, 1);
     color: rgba(0, 123, 255, 1);
-    padding: 20px;
+    padding: 30px;
     margin-left: 90px;
     margin-top: 20px;
     border-radius: 10px;
@@ -245,6 +257,7 @@ footer h1 {
     height: 200px;
     float: left;
     border-radius: 10px;
+    margin-right: 20px;
 }
 
 .game a {
